--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,31 @@
+@font-face {
+  font-family: 'Public Sans';
+  font-weight: 400;
+  src: url('/fonts/public-sans/PublicSans-Regular.woff2') format('woff2'),
+    url('/fonts/public-sans/PublicSans-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Public Sans';
+  font-weight: 500;
+  src: url('/fonts/public-sans/PublicSans-Medium.woff2') format('woff2'),
+    url('/fonts/public-sans/PublicSans-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Public Sans';
+  font-weight: 600;
+  src: url('/fonts/public-sans/PublicSans-SemiBold.woff2') format('woff2'),
+    url('/fonts/public-sans/PublicSans-SemiBold.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Public Sans';
+  font-weight: 700;
+  src: url('/fonts/public-sans/PublicSans-Bold.woff2') format('woff2'),
+    url('/fonts/public-sans/PublicSans-Bold.woff') format('woff');
+}
+
 *,
 *::before,
 *::after {
@@ -6,9 +34,9 @@
 
 body {
   margin: 0;
-  font-family: Untitled Sans, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+  font-family: Public Sans, Untitled Sans, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1;
